/* eslint-disable @typescript-eslint/require-await -- matching async mock signatures */
import { beforeEach, describe, expect, it, jest } from '@jest/globals';
import path from 'path';
import type { GitProcessOutput } from 'workspace-tools';
import * as wsTools from 'workspace-tools';
import { defaultRemoteBranchName } from '../../__fixtures__/gitDefaults';
import { initMockLogs } from '../../__fixtures__/mockLogs';
import { mockSpawnSuccess, MockSubprocessError } from '../../__fixtures__/mockSpawnResult';
import { makePackageInfos } from '../../__fixtures__/packageInfos';
import { performBump as _performBump } from '../../bump/performBump';
import { gitAsync as _gitAsync } from '../../git/gitAsync';
import { getOptions } from '../../options/getOptions';
import { bumpAndPush } from '../../publish/bumpAndPush';
import { tagPackages as _tagPackages } from '../../publish/tagPackages';
import { spawn as _spawn } from '../../spawn';
import { BeachballError } from '../../types/BeachballError';
import type { BeachballOptions } from '../../types/BeachballOptions';
import type { BumpInfo } from '../../types/BumpInfo';

jest.mock('workspace-tools');
jest.mock('../../bump/performBump'); // this has a bunch of logic which is tested separately
jest.mock('../../publish/tagPackages');
jest.mock('../../spawn');

const mockSpawn = _spawn as jest.MockedFunction<typeof _spawn>;
const mockPerformBump = _performBump as jest.MockedFunction<typeof _performBump>;
const mockTagPackages = _tagPackages as jest.MockedFunction<typeof _tagPackages>;
const wsToolsMocks = wsTools as jest.Mocked<typeof wsTools>;

describe('bumpAndPush', () => {
  const logs = initMockLogs();

  const fakeRoot = path.resolve('/fake/root');
  const publishBranch = 'publish_12345';

  function getExecaCalls() {
    return mockSpawn.mock.calls.map(([file, args]) => `${file} ${args?.join(' ')}`);
  }

  function getWsToolsGitCalls() {
    return wsToolsMocks.git.mock.calls.map(([args]) => `git ${args.join(' ')}`);
  }

  /** Create a mock workspace-tools git() result */
  function makeGitResult(opts: { success: boolean; output?: string }): GitProcessOutput {
    return {
      stderr: opts.success ? '' : (opts.output ?? ''),
      stdout: opts.success ? (opts.output ?? '') : '',
      success: opts.success,
      status: opts.success ? 0 : 1,
    } as GitProcessOutput;
  }

  async function callBumpAndPush(optionOverrides?: Partial<BeachballOptions>, maxRetries?: number) {
    const { options } = await getOptions({
      cwd: fakeRoot,
      argv: [],
      env: {},
      testRepoOptions: {
        branch: defaultRemoteBranchName,
        message: 'apply package updates',
        ...optionOverrides,
      },
    });
    const bumpInfo: BumpInfo = {
      packageInfos: makePackageInfos({ foo: { version: '1.1.0' }, bar: { version: '2.0.0' } }),
      modifiedPackages: new Set(['foo', 'bar']),
      changeFileChangeInfos: [],
      calculatedChangeTypes: { foo: 'minor', bar: 'major' },
      dependentChangedBy: {},
      packageGroups: {},
      scopedPackages: new Set(['foo', 'bar']),
      packageTags: {},
    };
    return bumpAndPush(bumpInfo, publishBranch, options, maxRetries);
  }

  beforeEach(() => {
    wsToolsMocks.parseRemoteBranch.mockReturnValue({ remote: 'origin', remoteBranch: 'master' });
    wsToolsMocks.revertLocalChanges.mockReturnValue(true);
    wsToolsMocks.git.mockReturnValue(makeGitResult({ success: true }));
    mockSpawn.mockImplementation(() => Promise.resolve(mockSpawnSuccess()));
    mockPerformBump.mockResolvedValue(undefined);
  });

  it('succeeds on first attempt', async () => {
    await callBumpAndPush();

    expect(mockPerformBump).toHaveBeenCalledTimes(1);
    expect(mockTagPackages).toHaveBeenCalledTimes(1);
    expect(wsToolsMocks.revertLocalChanges).toHaveBeenCalledTimes(1);
    expect(getWsToolsGitCalls().join('\n')).toEqual(
      'git fetch --no-tags origin +refs/heads/master:refs/remotes/origin/master'
    );
    expect(getExecaCalls()).toEqual([
      'git merge -X theirs origin/master',
      'git add .',
      'git commit -m apply package updates',
      'git checkout origin/master',
      'git merge -X ours publish_12345',
      'git push --no-verify --follow-tags --verbose origin HEAD:master',
    ]);

    // Beachball's logs are its UI, so snapshots are essentially "visual regression" tests
    expect(logs.getMockLines('all')).toMatchSnapshot();
  });

  it('skips fetch when options.fetch is false', async () => {
    await callBumpAndPush({ fetch: false });

    expect(wsToolsMocks.git).not.toHaveBeenCalled();
    expect(getExecaCalls().join('\n')).not.toContain('fetch');
  });

  it('specifies fetch depth when depth param is defined', async () => {
    wsToolsMocks.git.mockImplementation((args: string[]) => {
      if (args[0] === 'fetch') {
        expect(args).toContain('--depth=10');
      }
      return { stdout: '', stderr: '', success: true } as wsTools.GitProcessOutput;
    });

    expect.assertions(1);
    await callBumpAndPush({ fetch: true, depth: 10 });
  });

  it('retries on fetch failure then succeeds', async () => {
    wsToolsMocks.git
      .mockReturnValueOnce(makeGitResult({ success: false, output: 'fetch error' }))
      .mockReturnValueOnce(makeGitResult({ success: true }));

    await callBumpAndPush();

    expect(wsToolsMocks.revertLocalChanges).toHaveBeenCalledTimes(2);
    expect(mockPerformBump).toHaveBeenCalledTimes(1);

    expect(logs.getMockLines('warn')).toMatchInlineSnapshot(`
      "fetch error
      Fetching branch "master" from remote "origin" failed (code 1)
      [WARN 1/5]: Fetching from origin/master has failed! (see above for details)"
    `);
    expect(logs.getMockLines('all')).toMatchSnapshot();
  });

  it('retries on mergePublishBranch failure then succeeds', async () => {
    // First attempt: merge with branch succeeds, but commit in mergePublishBranch fails
    // (merge is call 1, add is call 2, commit is call 3)
    let callCount = 0;
    mockSpawn.mockImplementation(async () => {
      callCount++;
      // Fail on 3rd call (commit) in first attempt
      if (callCount === 3) {
        return new MockSubprocessError({ output: 'commit failed' });
      }
      return mockSpawnSuccess();
    });

    await callBumpAndPush();

    expect(wsToolsMocks.revertLocalChanges).toHaveBeenCalledTimes(2);
    expect(mockPerformBump).toHaveBeenCalledTimes(2);

    expect(logs.getMockLines('warn')).toMatchInlineSnapshot(`
      "commit failed
      Command failed (code 1): git commit -m apply package updates
      [WARN 1/5]: Merging to target has failed! (see above for details)"
    `);
  });

  it('retries on push failure then succeeds', async () => {
    let pushCount = 0;
    mockSpawn.mockImplementation(async (_cmd, args) => {
      if (args?.[0] === 'push') {
        pushCount++;
        if (pushCount === 1) return new MockSubprocessError({ output: 'push rejected' });
      }
      return mockSpawnSuccess();
    });

    await callBumpAndPush();

    expect(wsToolsMocks.revertLocalChanges).toHaveBeenCalledTimes(2);
    expect(mockPerformBump).toHaveBeenCalledTimes(2);
    expect(mockTagPackages).toHaveBeenCalledTimes(2);

    expect(logs.getMockLines('warn')).toMatchInlineSnapshot(`
      "push rejected
      Command failed (code 1): git push --no-verify --follow-tags --verbose origin HEAD:master
      [WARN 1/5]: Pushing to origin/master has failed! (see above for details)"
    `);
  });

  it('shows timeout message on push timeout', async () => {
    let pushCount = 0;
    mockSpawn.mockImplementation(async (_cmd, args) => {
      if (args?.[0] === 'push') {
        pushCount++;
        if (pushCount === 1) return new MockSubprocessError({ output: 'push timed out', timedOut: true });
      }
      return mockSpawnSuccess();
    });

    await callBumpAndPush();

    expect(logs.getMockLines('warn')).toMatchInlineSnapshot(`
      "push timed out
      Command failed (timed out): git push --no-verify --follow-tags --verbose origin HEAD:master
      [WARN 1/5]: Pushing to origin/master has timed out! (see above for details)"
    `);
  });

  it('uses custom commitMessage function for the publish commit', async () => {
    const commitMessage = jest.fn<NonNullable<BeachballOptions['commitMessage']>>(
      (_options, packageInfos) => `Published foo@${packageInfos.foo.version}`
    );
    // clear the default `message` so `commitMessage` is used
    await callBumpAndPush({ commitMessage, message: '' });

    // commitMessage is called with the options, package infos, and bump info
    expect(commitMessage).toHaveBeenCalledTimes(1);
    expect(commitMessage).toHaveBeenLastCalledWith(
      expect.objectContaining({ branch: defaultRemoteBranchName }),
      expect.objectContaining({ foo: expect.objectContaining({ version: '1.1.0' }) }),
      expect.objectContaining({ packageInfos: expect.anything() })
    );
    expect(getExecaCalls()).toContain('git commit -m Published foo@1.1.0');
  });

  it('prefers the message option over commitMessage', async () => {
    const commitMessage = jest.fn<NonNullable<BeachballOptions['commitMessage']>>(() => 'from commitMessage');
    await callBumpAndPush({ commitMessage, message: 'from message option' });

    // commitMessage is not called because an explicit message was provided
    expect(commitMessage).not.toHaveBeenCalled();
    expect(getExecaCalls()).toContain('git commit -m from message option');
  });

  it('uses default commit message when message is empty and no commitMessage', async () => {
    await callBumpAndPush({ message: '' });

    expect(getExecaCalls()).toContain('git commit -m applying package updates');
  });

  it('calls precommit hook before merge steps', async () => {
    const precommit = jest.fn<(cwd: string) => Promise<void>>(async () => console.log('hello from hook'));
    await callBumpAndPush({ hooks: { precommit } });

    expect(precommit).toHaveBeenCalledTimes(1);
    expect(precommit).toHaveBeenCalledWith(fakeRoot);

    // Should be called right before series of merge steps
    expect(logs.getMockLines('log')).toContain('hello from hook\n\nMerging publish_');
  });

  it('calls precommit hook on each retry', async () => {
    const precommit = jest.fn<(cwd: string) => Promise<void>>();
    mockSpawn.mockImplementation(async (_cmd, args) => {
      if (args?.[0] === 'push') return new MockSubprocessError({ output: 'push rejected' });
      return mockSpawnSuccess();
    });

    await expect(() => callBumpAndPush({ hooks: { precommit } }, 3)).rejects.toThrow(BeachballError);

    expect(precommit).toHaveBeenCalledTimes(3);
  });

  it('throws and calls displayManualRecovery after all retries exhausted', async () => {
    // Fail every fetch (happens to give the shortest snapshot output)
    wsToolsMocks.git.mockReturnValue(makeGitResult({ success: false, output: 'network error' }));

    await expect(() => callBumpAndPush({}, 3)).rejects.toThrow('Failed to bump and push after 3 attempts');

    expect(wsToolsMocks.revertLocalChanges).toHaveBeenCalledTimes(3);
    expect(mockPerformBump).not.toHaveBeenCalled();

    const logOutput = logs.getMockLines('all');
    expect(logOutput).toContain('Something went wrong with publishing'); // from displayManualRecovery
    expect(logOutput).toMatchSnapshot();
  });
});
